WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55277
AX: WK2: AXApplication not returning the AXFocusedUIElement within the web area
https://bugs.webkit.org/show_bug.cgi?id=55277
Summary
AX: WK2: AXApplication not returning the AXFocusedUIElement within the web area
chris fleizach
Reported
2011-02-25 16:25:33 PST
WK2 based windows are not returning the focused ui element correctly.
Attachments
patch
(1.09 KB, patch)
2011-02-25 16:27 PST
,
chris fleizach
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2011-02-25 16:27:57 PST
Created
attachment 83898
[details]
patch
chris fleizach
Comment 2
2011-02-25 16:32:00 PST
http://trac.webkit.org/changeset/79743
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug