AX: WK2: AXApplication not returning the AXFocusedUIElement within the web area https://bugs.webkit.org/show_bug.cgi?id=55277

Reviewed by Anders Carlsson.

* UIProcess/API/mac/WKView.mm:
(-[WKView accessibilityFocusedUIElement]):



git-svn-id: svn://svn.chromium.org/blink/trunk@79743 bbb929c8-8fbe-4397-9dbb-9b2b20218538