third_party/WebKit/Source/WebKit2/UIProcess/API/mac/WKView.mm
@@ -1555,6 +1555,11 @@ static void drawPageBackground(CGContextRef context, WebPageProxy* page, const I
     _data->_page->viewStateDidChange(WebPageProxy::ViewIsVisible);
 }
 
+- (id)accessibilityFocusedUIElement
+{
+    return _data->_remoteAccessibilityChild.get();
+}
+
 - (BOOL)accessibilityIsIgnored
 {
     return NO;
